@startuml

title __METERS's Class Diagram__\n

  namespace com.example.meters {
    class com.example.meters.FilledMeterFragment {
        {static} + POS : String
        ~ create : Button
        ~ data : TextView
        ~ date : TextView
        ~ delete : Button
        ~ description : TextView
        ~ listData : TextView
        ~ maxPos : int
        ~ name : TextView
        ~ send : Button
        + onCreateView()
        + onViewCreated()
    }
  }
  

  namespace com.example.meters {
    class com.example.meters.HTTPResponse {
        ~ bodyIsJArray : boolean
        ~ bodyIsJObject : boolean
        ~ bodyJArray : ArrayList<Map<String, String>>
        ~ bodyJObject : Map<String, String>
        - body : String
        - headers : Map<String, String>
        - status : String[]
        + getBody()
        + getHeader()
        + getHeaders()
        + getStatus()
        + getStatusCode()
        + isOk()
        + parseBodyAsJson()
        + parseBodyFieldAsJsonArray()
        + setBody()
        + setHeader()
        + setStatus()
        + setStatus()
        + setStatus()
        ~ parseJArray()
        ~ parseJObject()
    }
  }
  

  namespace com.example.meters {
    class com.example.meters.MainActivity {
        ~ PAGE_COUNT : int
        ~ pager : ViewPager2
        ~ pagerAdapter : FragmentStateAdapter
        + onBackPressed()
        # onCreate()
        # onStart()
        # runSignIn()
    }
  }
  

  namespace com.example.meters {
    class com.example.meters.MainActivity.MyFragmentPagerAdapter {
        ~ list : ArrayList<Meter>
        + MyFragmentPagerAdapter()
        + createFragment()
        + getItemCount()
    }
  }
  

  namespace com.example.meters {
    class com.example.meters.Meter {
        ~ dataArrayList : ArrayList<Map<String, String>>
        ~ description : String
        ~ id : String
        ~ lastData : String
        ~ name : String
        ~ url : String
        ~ verificationDate : String
        ~ Meter()
        ~ Meter()
        ~ dataListAsText()
        ~ delete()
        ~ get()
        ~ post()
    }
  }
  

  namespace com.example.meters {
    class com.example.meters.MeterList {
        ~ meterCollection : ArrayList<Meter>
        ~ url : String
        + setMeterCollection()
        ~ append()
        ~ load()
    }
  }
  

  namespace com.example.meters {
    class com.example.meters.RegisterActivity {
        ~ addressInput : TextView
        ~ emailInput : TextView
        ~ loginInput : TextView
        ~ nameInput : TextView
        ~ pwdInput : TextView
        ~ regBtn : Button
        # onCreate()
    }
  }
  

  namespace com.example.meters {
    class com.example.meters.ServerConnecter {
        ~ server : String
        {static} - TAG : String
        # doInBackground()
        ~ fetch()
    }
  }
  

  namespace com.example.meters {
    class com.example.meters.SignInActivity {
        ~ loginBtn : Button
        ~ loginInput : TextView
        ~ pwdInput : TextView
        ~ regBtn : Button

        # onCreate()
    }
  }
  

  namespace com.example.meters {
    class com.example.meters.Singleton {
        {static} + INSTANCE : Singleton
        ~ isSessionSet : boolean
        ~ liveTime : Date
        ~ sessionId : String
        ~ meters : MeterList
        ~ SetSession()
        - Singleton()
    }
  }
  

  namespace com.example.meters {
    class com.example.meters.User {
        ~ url : String
        + login()
        + register()
    }
  }
  

  com.example.meters.FilledMeterFragment <-- com.example.meters.Singleton : singleton
  com.example.meters.MainActivity <-- com.example.meters.Singleton : singletone
  com.example.meters.MainActivity +-down- com.example.meters.MainActivity.MyFragmentPagerAdapter
  com.example.meters.RegisterActivity <-- com.example.meters.Singleton : singleton
  com.example.meters.ServerConnecter <-- com.example.meters.HTTPResponse : response
  com.example.meters.ServerConnecter <-- com.example.meters.Singleton : singleton
  com.example.meters.SignInActivity <-- com.example.meters.Singleton : dataSingleton

  com.example.meters.MeterList o-- com.example.meters.Meter : meterCollection
  com.example.meters.Singleton <-- com.example.meters.MeterList : meters
  com.example.meters.User <-- com.example.meters.ServerConnecter : connecter
  com.example.meters.User <-- com.example.meters.Singleton : singleton


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
